Fix single item css and test search items on mobile

--- a/src/css/Item.module.css
+++ b/src/css/Item.module.css
@@ -1,56 +1,52 @@
 .item {
   display: flex;
   justify-content: center;
-  flex-direction: column;
+  align-items: center;
   height: 100vh;
 }
 
 .item-content {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  flex-direction: column;
 }
 
 .item-detail {
   display: flex;
-  justify-content: center;
-  gap: 8px;
+  flex-direction: column;
+  padding: 20px;
+  padding-top: 10px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  margin: 20px;
 }
 
-.item-detail div {
+.detail-section {
   display: flex;
-  justify-content: center;
-  gap: 8px;
+  gap: 10px;
 }
 
-.item-detail div p {
-  margin-top: 0;
+.detail-section p {
+  text-align: left;
+  margin-bottom: 5px;
 }
 
-.item-content a {
-  text-decoration: none;
+.detail-section a {
   color: #eeeba7;
+  text-decoration: none;
 }
 
-.item-content a:hover {
+.detail-section a:hover {
+  text-decoration: underline;
+}
+
+.back-button {
+  display: block;
+  text-align: center;
+  color: #eeeba7;
+  text-decoration: none;
+}
+
+.back-button:hover {
   color: #f1dc9c;
-  transition: 0.2s ease-in-out;
-}
-
-@media (max-width: 1280px) {
-  .item p {
-    font-size: 20px;
-  }
-}
-
-@media (max-width: 430px) {
-  .item h1 {
-    font-size: 26px;
-  }
-}
-
-@media (max-width: 375px) {
-  .item h1 {
-    font-size: 22px;
-  }
 }
